--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ openai==0.28.0              # OpenAI APIクライアント
 python-docx==0.8.11         # Wordドキュメントの読み取り
 python-dotenv==1.0.0        # .envファイルから環境変数の読み込み
 Cython==0.29.36
-scikit-learn==1.1.3         # TF-IDFとコサイン類似度の計算(1.
+scikit-learn==1.0.2         # TF-IDFとコサイン類似度の計算(1.1.3から修正
+numpy==1.21.6
